--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
 </head>
 <body style="margin:0;">
   <div style = "display: flex; width:100%; height: 100vh;">
-    <video id = 'vid' loop = 'true' controls>
+    <video id = 'vid' loop = 'true' >
+      <videocontrols></videocontrols>
       <source src="tired.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
@@ -26,4 +27,17 @@
 
 </html>
 
+<!-- separate video and audio -->
+<!-- <video id="myvideo" controls muted>
+    <source src="path/to/video.mp4" type="video/mp4" />
+    <audio id="myaudio" controls>
+        <source src="path/to/audio.mp3" type="audio/mpeg"/>
+    </audio>
+</video>
 
+<script>
+var myvideo = document.getElementById("myvideo");
+var myaudio = document.getElementById("myaudio");
+myvideo.onplay  = function() { myaudio.play();  }
+myvideo.onpause = function() { myaudio.pause(); }
+</script> -->
