--- a/public/admin.html
+++ b/public/admin.html
@@ -11,7 +11,7 @@
 </head>
 <body style="margin:0;">
   <div style = "display: flex; width:100%; height: 100vh;">
-    <video id = 'vid' loop = 'true' controls>
+    <video id = 'vid' loop = 'true' controls playsinline>
       <source src="tired.mp4" type="video/mp4" loop = 'true'>
       Your browser does not support the video tag.
     </video>
