--- a/public/admin.html
+++ b/public/admin.html
@@ -12,15 +12,16 @@
 <body style="margin:0;">
   <div style = "display: flex; width:100%; height: 100vh;">
     <video id = 'vid' loop = 'true' controls playsinline>
-      <source src="tired.mp4" type="video/mp4" loop = 'true'>
+      <source src="sam.mp4" type="video/mp4" loop = 'true'>
       Your browser does not support the video tag.
     </video>
     <div class ="content" style="position:absolute">
       <h1 id = "clientID">ADMIN - NOT SET</h1>
       <p id="clientCount">0 Clients connected</p>
-      
-      <button class="button" onclick="setMaster()">Set Master</button>
+      <button class="" onclick="setMaster()" style='width:51vw;'>Set Master</button>
+      <button class="" onclick="syncAll()" style='width:51vw'>Re-Sync All</button>
     </div>
+
   </div>
 </body>
 
