--- a/public/admin.html
+++ b/public/admin.html
@@ -9,21 +9,22 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
 </head>
-<body style="margin:0;">
-  <div style = "display: flex; width:100%; height: 100vh;">
-    <video id = 'vid' loop = 'true' controls playsinline>
+<body style="margin:0; height:100%; width:100%; object-fit:fill;">
+
+    <div class ="content" style="position:absolute; top:0; padding:0; z-index:2;">
+      <h1 id = "clientID">ADMIN - NOT SET</h1>
+      <p id="clientCount">0 Clients connected</p>
+      <button class="" onclick="setMaster()" style='width:51vw; z-index: 2;'>Set Master</button>
+      <button class="" onclick="syncAll()" style='width:51vw; z-index: 2;'>Re-Sync All</button>
+    </div>
+
+    <video id = 'vid' loop = 'true' controls playsinline style = "object-fit:fill; height: 100%; width:100%; margin:0px;">
       <source src="sam.mp4" type="video/mp4" loop = 'true'>
       Your browser does not support the video tag.
     </video>
-    <div class ="content" style="position:absolute">
-      <h1 id = "clientID">ADMIN - NOT SET</h1>
-      <p id="clientCount">0 Clients connected</p>
-      <button class="" onclick="setMaster()" style='width:51vw;'>Set Master</button>
-      <button class="" onclick="syncAll()" style='width:51vw'>Re-Sync All</button>
-    </div>
-
-  </div>
-</body>
+  </body>
+    
+    
 
 </html>
 
