--- a/public/index.html
+++ b/public/index.html
@@ -5,77 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>RISING</title>
+    <title>Wilton Park</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/85188/jquery.ripples-min.js"></script> -->
-    <script src="ripple.js"></script>
 </head>
 
 <body style="margin:0; height:100%; width:100%; object-fit:cover;">
-  <!-- <img src='img/DC_button_1.png' style='position:absolute; top:0; z-index:14'> -->
-  <div id='time' style =' font-family: myfont; margin:0; z-index: 15; position: absolute;  color: white; font-size: 10vw; left:6.5%'>00:00:00</div>
-  <div id = 'preload' class ='image' style='z-index:1000; background-image: none; background-color: black;'>
-    <div class="lds-ripple" style = 'position: absolute; top:50%; left:50%; -webkit-transform:translate(-50%, -50%); transform: translate(-50%, -50%);'><div></div><div></div></div>
-  </div>
-  <a id='link' hidden class='link' href="https://brokentalkers.ie/rising/">FOR MORE INFORMATION ABOUT PHASE 2 OF RISING. CLICK HERE</a>
-  <!-- <div id = 'copy' class ='image3' ></div> -->
-  <div id = 'copy' class ='image' ></div>
-  <div id = 'copy2' class ='image2'></div>
-  <div id = 'copy3' class ='image3' ></div>
-  <div class ="content" style="position:absolute; top:0; padding:0; z-index:2;">
-    <h1 id = "clientID"></h1>
-    <p id="clientCount" hidden>0 Clients connected</p>
-    <!-- <button id="resync" style='z-index: 12;'class="button2" onclick="getTime()"hidden>re-sync</button> -->
-    <!-- <button id="resyncAud" style='z-index: 10;'class="button2" onclick="getTime()"> audio sync</button> -->
-  </div>
-
-
-    <video id = 'vid'  playsinline style = "object-fit:cover; height: 100%; width:100%; margin:0px;">
-      <source src="WaitingRoom720.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-
-    <!-- <video id = 'vid2'  playsinline muted style = "object-fit:cover; height: 100%; width:100%; margin:0px; z-index: -999;">
-      <source src="showVid720.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video> -->
-    
-
+  <!-- <div id = 'copy' class ='image' ></div> -->
+  <div class='bg-image 1 show'></div>
+  <div class='bg-image 2' style = 'background-image:url(/img/WP-DC-Cian.jpg);'></div>
+  <div class='bg-image 3' style = 'background-image:url(/img/WP-DC-Cormac.jpg);'></div>
+  <div class='bg-image 4' style = 'background-image:url(/img/WP-DC-Kev.jpg);'></div>
+  <div class='bg-image 5' style = 'background-image:url(/img/WP-DC-Panther.jpg);'></div>
+  <div class='bg-image 6' style = 'background-image:url(/img/WP-DC-Roman.jpg);'></div>
+  <div class='bg-image 7' style = 'background-image:url(/img/WP-DC-Ross.jpg);'></div>
+  <div class='bg-image 8' style = 'background-image:url(/img/WP-DC-Sergey.jpg);'></div>
+    </div>
     <!-- WebRTC audio -->
-    <audio playsinline autoplay controls hidden muted></audio>
-
-    <!-- local audio -->
-    <audio id='test' preload='auto' loop = 'true' hidden playsinline controls src='WaitingRoom.wav'
-    oncanplaythrough="myOnCanPlayThroughFunction()"
-    onloadeddata="myOnLoadedData()"
-    ></audio>
-
-  <button id="sync" class="button" onclick="next()"></button>
-  <button id="unmute" class="button2" onclick="unmute()"></button>
-  
-  
-<script type='text/javascript'>
-    // function rippleOn(){ 
-    //   try {
-    //     $('.image').ripples({
-    //       resolution: 256,
-    //       perturbance: 2
-    //     });
-    //     $('.image2').ripples({
-    //       resolution: 256,
-    //       perturbance: 2
-    //     });
-    //   }
-    //   catch (e) {
-    //     $('.error').show().text(e);
-    //   }
-    // }
-    // function drop(){ 
-    //   $('image2').ripples("drop", 0, 0,200,200);
-    // }
-</script>
-<script src="script.js"></script>
+    <audio id = 'audio' playsinline autoplay controls hidden muted></audio>
+   <!-- <i class="fas fa-volume-off"></i> -->
+    <div class="container">
+      <div id='mute-button' class="unmuted toggle-sound"  href="#" onclick="unmute()">
+        <div class="tooltip--left sound" data-tooltip="Turn On/Off Sound">
+            <div class="sound--icon fa fa-2x fa-volume-off"></div>
+            <div class="sound--wave sound--wave_one"></div>
+            <div class="sound--wave sound--wave_two"></div>
+            <div class="sound--wave sound--wave_three"></div>
+        </div>
+      </div>
+    </div>
+    <!-- <button class="button" onclick="unmute()">Un-Mute</button> -->
+  <script src="user.js"></script>
 </html>
 
 
