Placeholder Image for IPUT

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,14 @@
 <body style="margin:0; height:100%; width:100%; object-fit:cover;">
   <!-- <div id = 'copy' class ='image' ></div> -->
   <div class='bg-image 1 show'></div>
-  <div class='bg-image 2' style = 'background-image:url(/img/WP-DC-Cian.jpg);'></div>
-  <div class='bg-image 3' style = 'background-image:url(/img/WP-DC-Cormac.jpg);'></div>
-  <div class='bg-image 4' style = 'background-image:url(/img/WP-DC-Kev.jpg);'></div>
+  <div class='bg-image 2' style = 'background-image:url(/img/WP-DC-Anna.jpg);'></div>
+  <div class='bg-image 3' style = 'background-image:url(/img/WP-DC-Kev.jpg);'></div>
+  <div class='bg-image 4' style = 'background-image:url(/img/WP-DC-Cormac.jpg);'></div>
   <div class='bg-image 5' style = 'background-image:url(/img/WP-DC-Panther.jpg);'></div>
   <div class='bg-image 6' style = 'background-image:url(/img/WP-DC-Roman.jpg);'></div>
   <div class='bg-image 7' style = 'background-image:url(/img/WP-DC-Ross.jpg);'></div>
   <div class='bg-image 8' style = 'background-image:url(/img/WP-DC-Sergey.jpg);'></div>
+  <div class='bg-image 9' style = 'background-image:url(/img/WP-DC-Cian.jpg);'></div>
     </div>
     <!-- WebRTC audio -->
     <audio id = 'audio' playsinline autoplay controls hidden muted></audio>
